add cdtb dataset

--- a/pytracking/VOT/trackers.ini
+++ b/pytracking/VOT/trackers.ini
@@ -1,12 +1,11 @@
-[DiMP]  # <tracker-name>
-label = DiMP
+[ATOM]  # <tracker-name>
+label = ATOM
 protocol = traxpython
 
-command = import pytracking.run_vot as run_vot; run_vot.run_vot2020('dimp', 'dimp50')  # Set the tracker name and the parameter name
+command = import pytracking.run_vot as run_vot; run_vot.run_vot2020('atom', 'default')  # Set the tracker name and the parameter name
 
 # Specify a path to trax python wrapper if it is not visible (separate by ; if using multiple paths)
-paths = PATH_TO_PYTRACKING
+paths = /home/yan/Data2/pytracking-song/pytracking/
 
 # Additional environment paths
 #env_PATH = <additional-env-paths>;${PATH}
-
